CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(My_apps)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Pass_breaker)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Binary_converter)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Character_converter)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Roman_converter)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Distance_2_points)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Distance_cities)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Fizz_Buzz_test)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Sudoku_checker)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Compute_change)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Mobile_app)
