CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(My_apps)



ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Binary_converter)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Character_converter)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Pass_breaker)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Roman_converter)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Sudoku_checker)
